<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:ignore="RtlHardcoded">

	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"
		app:popupTheme="@style/AppTheme.PopupOverlay" >

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/text_player_select"
			android:textSize="@dimen/title_bar_title_text_size"
			android:textColor="#FFFFFFFF"/>

		<Button
			android:id="@+id/btn_select_all"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:text="@string/text_select_all"
			android:textSize="@dimen/title_bar_action_text_size"
			android:textColor="@drawable/title_bar_action_bg"
			android:background="@null"/>

	</android.support.v7.widget.Toolbar>

	<RelativeLayout
		android:id="@+id/none_empty_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/toolbar">

		<com.windfind.clubassistant.view.BottomBar
			android:id="@+id/bottom_bar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			app:left_btn_text="@string/text_cancel"
			app:center_btn_text="@string/text_add_extra"
			app:right_btn_text="@string/text_ok"/>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/member_list"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_above="@id/bottom_bar"
			android:layout_gravity="center_horizontal|top"
			android:focusable="true" />

	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/empty_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/appbar"
		android:visibility="gone">

		<TextView
			android:id="@+id/empty_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:text="@string/text_empty_member"
			android:textColor="@color/hint_color"
			android:textSize="@dimen/empty_text_size"/>

		<ImageView
			android:id="@+id/empty_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_above="@id/empty_text"
			android:layout_marginBottom="10dp"
			android:src="@drawable/empty_member"
			android:contentDescription="@string/text_description"/>

	</RelativeLayout>

</RelativeLayout>