<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:ignore="RtlHardcoded"
	android:focusable="true"
	android:focusableInTouchMode="true">

	<FrameLayout
		android:id="@+id/top_image"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/new_member_bg"
			android:contentDescription="@string/text_description"/>

		<ImageView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="#33000000"
			android:contentDescription="@string/text_description" />

		<ImageButton
			android:id="@+id/btn_expend"
			android:layout_width="40dp"
			android:layout_height="40dp"
			android:layout_gravity="bottom|right"
			android:src="#00FF0000"
			android:background="@null"
			android:contentDescription="@string/text_description"/>

	</FrameLayout>

	<com.windfind.clubassistant.view.BottomBar
		android:id="@+id/bottom_bar"
		android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    app:left_btn_text="@string/text_cancel"
	    app:right_btn_text="@string/text_save"
	    android:layout_alignParentBottom="true" />

	<android.support.v4.view.ViewPager
		android:id="@+id/editor_pager"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/top_image"
		android:layout_above="@id/bottom_bar" />

</RelativeLayout>