<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/game_list_padding"
	android:background="@drawable/item_bg"
	tools:ignore="RtlHardcoded">

	<RelativeLayout
		android:id="@+id/data_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone">

		<RelativeLayout
			android:id="@+id/label_container"
			android:layout_width="match_parent"
			android:layout_height="@dimen/history_list_label_height"
			android:background="#FFF0F0F0">

			<RelativeLayout
				android:id="@+id/index_label"
				android:layout_width="@dimen/history_list_index_width"
				android:layout_height="wrap_content">

				<View
					android:layout_width="0.5dp"
					android:layout_height="match_parent"
					android:layout_alignParentRight="true"
					android:background="@color/line_color" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:textSize="@dimen/normal_text_size"
					android:textColor="@color/normal_name_color"
					android:text="@string/label_index"/>

			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/attendance_label"
				android:layout_width="@dimen/history_attendance_width"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true">

				<View
					android:layout_width="0.5dp"
					android:layout_height="match_parent"
					android:layout_alignParentLeft="true"
					android:background="@color/line_color" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerInParent="true"
					android:textSize="@dimen/normal_text_size"
					android:textColor="@color/normal_name_color"
					android:text="@string/text_attendance"/>

			</RelativeLayout>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_toRightOf="@id/index_label"
				android:layout_toLeftOf="@id/attendance_label"
				android:layout_marginLeft="16dp"
				android:layout_centerVertical="true"
				android:gravity="left"
				android:textSize="@dimen/normal_text_size"
				android:textColor="@color/normal_name_color"
				android:text="@string/label_player"/>

			<View
				android:id="@+id/separating_line"
				android:layout_width="match_parent"
				android:layout_height="0.5dp"
				android:layout_alignParentLeft="true"
				android:layout_below="@id/index_label"
				android:layout_marginTop="8dp"
				android:background="@color/line_color" />

		</RelativeLayout>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/attendance_list"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/label_container"
			android:layout_gravity="center_horizontal|top"
			android:clipToPadding="false"
			android:focusable="true" />

	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/empty_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView
			android:id="@+id/empty_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:text="@string/text_empty_record"
			android:textColor="@color/hint_color"
			android:textSize="@dimen/empty_text_size"/>

		<ImageView
			android:id="@+id/empty_icon"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_above="@id/empty_text"
			android:layout_marginBottom="10dp"
			android:src="@drawable/empty_record"
			android:contentDescription="@string/text_description"/>

	</RelativeLayout>

</RelativeLayout>