<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="@dimen/member_list_padding"
	android:background="@drawable/item_bg">

	<!-- Bottom bar -->
	<com.windfind.clubassistant.view.BottomBar
		android:id="@+id/bottom_bar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:center_btn_text="@string/text_action_group"
		app:right_btn_text="@string/text_complete"
		android:layout_alignParentBottom="true" />

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_above="@id/bottom_bar">

		<android.support.v7.widget.RecyclerView
			android:id="@+id/group_list"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="center_horizontal|top"
			android:clipToPadding="false"
			android:focusable="true"
			android:visibility="gone" />

		<RelativeLayout
			android:id="@+id/empty_content"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center">

			<ImageView
				android:id="@+id/empty_icon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true"
				android:src="@drawable/empty_record"
				android:contentDescription="@string/text_description"/>

			<TextView
				android:id="@+id/empty_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/empty_icon"
				android:layout_marginTop="10dp"
				android:layout_centerHorizontal="true"
				android:text="@string/text_empty_group"
				android:textColor="@color/hint_color"
				android:textSize="@dimen/empty_text_size"/>

		</RelativeLayout>

	</FrameLayout>

</RelativeLayout>